@@ -1,21 +1,22 @@
 package com.plzgraduate.myongjigraduatebe.lecture.application.service;
 
-import com.plzgraduate.myongjigraduatebe.core.exception.ErrorCode;
 import com.plzgraduate.myongjigraduatebe.lecture.api.dto.response.PopularLectureResponse;
 import com.plzgraduate.myongjigraduatebe.lecture.api.dto.response.PopularLecturesByCategoryResponse;
 import com.plzgraduate.myongjigraduatebe.lecture.api.dto.response.PopularLecturesInitResponse;
-import com.plzgraduate.myongjigraduatebe.lecture.api.dto.response.PopularLecturesPageResponse;
 import com.plzgraduate.myongjigraduatebe.lecture.application.port.PopularLecturePort;
 import com.plzgraduate.myongjigraduatebe.lecture.application.usecase.PopularLecturesUseCase;
 import com.plzgraduate.myongjigraduatebe.lecture.application.usecase.dto.PopularLectureDto;
 import com.plzgraduate.myongjigraduatebe.lecture.domain.model.PopularLectureCategory;
+import com.plzgraduate.myongjigraduatebe.core.exception.ErrorCode;
+import com.plzgraduate.myongjigraduatebe.user.domain.model.College;
+import java.util.NoSuchElementException;
+import java.util.Arrays;
+import java.util.AbstractMap;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -24,26 +25,16 @@ public class PopularLecturesService implements PopularLecturesUseCase {
 
     private final PopularLecturePort popularLecturePort;
     
-
-    @Override
-    public List<PopularLectureDto> getPopularLecturesByTotalCount() {
-        return popularLecturePort.getPopularLecturesByTotalCount();
-    }
-
-    @Override
-    public PopularLecturesPageResponse getPopularLectures(int limit, String cursor) {
-        List<PopularLectureDto> slice = popularLecturePort.getPopularLecturesSlice(limit, cursor);
-
-        List<PopularLectureResponse> pageItems = slice.stream()
-                .map(PopularLectureResponse::from)
-                .collect(Collectors.toUnmodifiableList());
-
-        if (cursor == null && pageItems.isEmpty()) {
-            throw new NoSuchElementException(ErrorCode.NO_POPULAR_LECTURES.toString());
+    private void validateMajorAndEntryYear(String major, int entryYear) {
+        try {
+            // 전공+학번 조합이 유효(단과대 매핑 가능)한지 선제 검증
+            College.findBelongingCollege(major, entryYear);
+        } catch (IllegalArgumentException e) {
+            // 일관된 에러 코드로 매핑하여 400(BAD_REQUEST) 응답되도록 던짐
+            throw new IllegalArgumentException(ErrorCode.UNSUPPORTED_STUDENT_CATEGORY.toString());
         }
-
-        return PopularLecturesPageResponse.of(pageItems, limit);
     }
+
 
     @Override
     public PopularLecturesInitResponse getInitPopularLectures(
@@ -52,18 +43,24 @@ public class PopularLecturesService implements PopularLecturesUseCase {
             int limit,
             String cursor
     ) {
+        // 모든 카테고리에 대해 일관된 선제 검증 수행
+        validateMajorAndEntryYear(major, entryYear);
         // 카테고리별 전체 개수
         List<PopularLecturesInitResponse.SectionMeta> sections =
                 popularLecturePort.getSections(major, entryYear);
 
-        // 초기 섹션 총합이 0이면 404 + 표준 에러코드
-        long totalSum = sections.stream().mapToLong(PopularLecturesInitResponse.SectionMeta::getTotal).sum();
-        if (totalSum == 0) {
-            throw new NoSuchElementException(com.plzgraduate.myongjigraduatebe.core.exception.ErrorCode.NO_POPULAR_LECTURES.toString());
+        // 데이터가 전혀 없는 경우: 빈 리스트로 안전 반환
+        if (sections.isEmpty()) {
+            return PopularLecturesInitResponse.of(
+                    sections,
+                    PopularLectureCategory.ALL,
+                    List.of(),
+                    limit
+            );
         }
 
         // 첫 번째 카테고리
-        PopularLectureCategory firstCategory = sections.get(0).getCategoryName();
+        PopularLectureCategory firstCategory = sections.getFirst().getCategoryName();
 
         // 해당 카테고리 강의 목록
         List<PopularLectureDto> lectureDtos =
@@ -71,12 +68,7 @@ public class PopularLecturesService implements PopularLecturesUseCase {
 
         List<PopularLectureResponse> lectures = lectureDtos.stream()
                 .map(PopularLectureResponse::from)
-                .collect(Collectors.toUnmodifiableList());
-
-        // 카테고리=ALL 초기 primeSection 강의가 0건이어도(이상 케이스) 404 처리
-        if (cursor == null && lectures.isEmpty()) {
-            throw new NoSuchElementException(com.plzgraduate.myongjigraduatebe.core.exception.ErrorCode.NO_POPULAR_LECTURES.toString());
-        }
+                .toList();
 
         return PopularLecturesInitResponse.of(
                 sections,
@@ -94,23 +86,73 @@ public class PopularLecturesService implements PopularLecturesUseCase {
             int limit,
             String cursor
     ) {
-
+        // 모든 카테고리에 대해 일관된 선제 검증 수행
+        validateMajorAndEntryYear(major, entryYear);
         List<PopularLectureDto> lectureDtos =
                 popularLecturePort.getLecturesByCategory(major, entryYear, category, limit, cursor);
 
+        if (lectureDtos.isEmpty()) {
+            throw new NoSuchElementException(ErrorCode.NON_EXISTED_LECTURE.toString());
+        }
+
         List<PopularLectureResponse> lectures = lectureDtos.stream()
                 .map(PopularLectureResponse::from)
-                .collect(Collectors.toUnmodifiableList());
-
-        // 초기 조회(cursor 없음)인데 해당 카테고리 결과가 0건이면 404 + 표준 에러코드
-        if (cursor == null && lectures.isEmpty()) {
-            throw new NoSuchElementException(com.plzgraduate.myongjigraduatebe.core.exception.ErrorCode.NO_POPULAR_LECTURES.toString());
-        }
+                .toList();
 
         return PopularLecturesByCategoryResponse.of(
                 category,
                 lectures,
                 limit
         );
+    }
+
+    @Override
+    public PopularLecturesByCategoryResponse getDefaultPopularLectures(
+            String major,
+            int entryYear,
+            int limit,
+            String cursor
+    ) {
+        // ALL 경로 진입 전에도 동일한 선제 검증 수행
+        validateMajorAndEntryYear(major, entryYear);
+        // Avoid double work: probe fixed category order and return first non-empty page
+        PopularLectureCategory[] order = new PopularLectureCategory[] {
+                PopularLectureCategory.BASIC_ACADEMICAL_CULTURE,
+                PopularLectureCategory.CORE_CULTURE,
+                PopularLectureCategory.COMMON_CULTURE,
+                PopularLectureCategory.MANDATORY_MAJOR,
+                PopularLectureCategory.ELECTIVE_MAJOR
+        };
+
+        return Arrays.stream(order)
+                .map(cat -> new AbstractMap.SimpleEntry<>(
+                        cat,
+                        popularLecturePort.getLecturesByCategory(major, entryYear, cat, limit, cursor)
+                ))
+                .filter(e -> !e.getValue().isEmpty())
+                .findFirst()
+                .map(e -> {
+                    List<PopularLectureResponse> lectures = e.getValue().stream()
+                            .map(PopularLectureResponse::from)
+                            .toList();
+                    return PopularLecturesByCategoryResponse.of(e.getKey(), lectures, limit);
+                })
+                .orElseThrow(() -> new NoSuchElementException(ErrorCode.NON_EXISTED_LECTURE.toString()));
+    }
+
+    @Override
+    public PopularLecturesByCategoryResponse getPopularLectures(
+            String major,
+            int entryYear,
+            PopularLectureCategory category,
+            int limit,
+            String cursor
+    ) {
+        // 통합 진입점에서도 동일 검증으로 일관성 보장
+        validateMajorAndEntryYear(major, entryYear);
+        if (category == PopularLectureCategory.ALL) {
+            return getDefaultPopularLectures(major, entryYear, limit, cursor);
+        }
+        return getPopularLecturesByCategory(major, entryYear, category, limit, cursor);
     }
 }
